[package]
name = "apex-dma-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "apex-dma"
path = "src/main.rs"

[dependencies]
memprocfs = "5.16.0"
memoffset = "0.9"
log = "0.4.21"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
eframe = { version = "0.27", features = ["wgpu"] }
glam = "0.27"
egui = "0.27"
bytemuck = { version = "1.16", features = ["extern_crate_std", "derive"] }